--- a/src/addPatientsPopUp/addPatientsLayout.fxml
+++ b/src/addPatientsPopUp/addPatientsLayout.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXListView?>
+<?import com.jfoenix.controls.JFXTreeTableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
@@ -12,7 +12,7 @@
          <children>
             <JFXButton fx:id="cancelOperation" layoutX="53.0" layoutY="538.0" onMouseClicked="#cancelOperation" prefHeight="29.0" prefWidth="178.0" styleClass="window_button" text="Cancel operation" />
             <JFXButton layoutX="260.0" layoutY="538.0" prefHeight="29.0" prefWidth="178.0" styleClass="window_button" text="Add selected patients" />
-            <JFXListView layoutX="15.0" layoutY="14.0" prefHeight="500.0" prefWidth="460.0" />
+            <JFXTreeTableView fx:id="PatientTreeView" layoutX="15.0" layoutY="14.0" prefHeight="500.0" prefWidth="460.0" />
          </children>
       </Pane>
    </children>
