--- a/src/insertIdPopUp/insertIdLayout.fxml
+++ b/src/insertIdPopUp/insertIdLayout.fxml
@@ -15,7 +15,7 @@
                   <Font size="14.0" />
                </font>
             </JFXTextField>
-            <JFXButton fx:id="confirmButton" layoutX="80.0" layoutY="98.0" onMouseClicked="#closeDialog" prefHeight="29.0" prefWidth="140.0" styleClass="window_button" text="Confirm" />
+            <JFXButton fx:id="confirmButton" layoutX="80.0" layoutY="98.0" prefHeight="29.0" prefWidth="140.0" styleClass="window_button" text="Confirm" />
          </children>
       </Pane>
    </children>
