--- a/src/insertIdPopUp/insertIdStyle.css
+++ b/src/insertIdPopUp/insertIdStyle.css
@@ -28,3 +28,9 @@
     -fx-border-radius: 40;
 	-fx-border-color: linear-gradient(to bottom left, #00d4ff, #020024);
 }
+
+.jfx-text-field {
+	-fx-prompt-text-fill: #4d4d4d;
+	-fx-font-size: 14;
+	-fx-font-weight: normal;
+}
