--- a/src/addPatientsPopUp/addPatientStyle.css
+++ b/src/addPatientsPopUp/addPatientStyle.css
@@ -10,7 +10,7 @@
 }
 
 .blue_color {
-   -fx-background-color: linear-gradient(to bottom left, #00d4ff, #020024);
+   -fx-background-color: linear-gradient(to bottom left, #00A9CC, #020024);
    -fx-background-radius: 25 25 25 25;
 }
 
@@ -22,7 +22,7 @@
     -fx-text-fill: #000000b0;
 	-fx-border-width: 2;
     -fx-border-radius: 40;
-	-fx-border-color: linear-gradient(to bottom left, #00d4ff, #020024);
+	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
 }
 
 .window_button:hover {
@@ -32,7 +32,7 @@
     -fx-text-fill: #00000098;
 	-fx-border-width: 2;
     -fx-border-radius: 40;
-	-fx-border-color: linear-gradient(to bottom left, #00d4ff, #020024);
+	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
 }
 
 .window_button_big {
@@ -43,7 +43,7 @@
     -fx-text-fill: #000000b0;
 	-fx-border-width: 2;
     -fx-border-radius: 40;
-	-fx-border-color: linear-gradient(to bottom left, #00d4ff, #020024);
+	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
 }
 
 .window_button_big:hover {
@@ -53,5 +53,5 @@
     -fx-text-fill: #00000098;
 	-fx-border-width: 2;
     -fx-border-radius: 40;
-	-fx-border-color: linear-gradient(to bottom left, #00d4ff, #020024);
+	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
 }
