--- a/src/doctorPatientsList/doctorPatientsStyle.css
+++ b/src/doctorPatientsList/doctorPatientsStyle.css
@@ -4,7 +4,7 @@
 }
 
 .blue_color {
-   -fx-background-color: linear-gradient(to bottom left, #00d4ff, #020024);
+   -fx-background-color: linear-gradient(to bottom left, #00A9CC, #020024);
    -fx-background-radius: 25 25 25 25;
 }
 
@@ -16,7 +16,7 @@
     -fx-text-fill: #000000b0;
 	-fx-border-width: 2;
     -fx-border-radius: 40;
-	-fx-border-color: linear-gradient(to bottom left, #00d4ff, #020024);
+	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
 }
 
 .window_button:hover {
@@ -26,7 +26,7 @@
     -fx-text-fill: #00000098;
 	-fx-border-width: 2;
     -fx-border-radius: 40;
-	-fx-border-color: linear-gradient(to bottom left, #00d4ff, #020024);
+	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
 }
 
 .tree_view {
