--- a/src/logIn/LogInStyle.css
+++ b/src/logIn/LogInStyle.css
@@ -5,7 +5,7 @@
 }
 
 .blue_color {
-   -fx-background-color: linear-gradient(to bottom left, #00d4ff, #020024);
+   -fx-background-color: linear-gradient(to bottom left, #00A9CC, #020024);
    -fx-background-radius: 25 25 25 25;
 }
 
@@ -26,7 +26,7 @@
 }
 
 .starter_buttom {
-	-fx-background-color: linear-gradient(to bottom left, #00d4ff, #020024);
+	-fx-background-color: linear-gradient(to bottom left, #00A9CC, #020024);
 	-fx-font-weight: normal;
 	-fx-text-fill: white;
 	-fx-font-size: 20;
@@ -38,7 +38,7 @@
 	-fx-font-weight: normal;
     -fx-font-size: 20;
     -fx-text-fill: #000000b0;
-    -fx-border-color: linear-gradient(to bottom left, #00d4ff, #020024);
+    -fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
     -fx-border-width: 4;
     -fx-border-radius: 20;
 }
@@ -49,7 +49,7 @@
     -fx-font-size: 14;
     -fx-background-radius: 12;
     -fx-text-fill: #000000b0;
-    -fx-border-color: linear-gradient(to bottom left, #00d4ff, #020024);
+    -fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
     -fx-border-width: 3;
     -fx-border-radius: 12;
 }
@@ -58,7 +58,7 @@
 	-fx-font-weight: normal;
     -fx-font-size: 14;
     -fx-text-fill: #00000098;
-    -fx-border-color: linear-gradient(to bottom left, #00d4ff, #020024);
+    -fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
     -fx-border-width: 3;
     -fx-border-radius: 12;
 }
@@ -71,7 +71,7 @@
     -fx-text-fill: #000000b0;
 	-fx-border-width: 2;
     -fx-border-radius: 40;
-	-fx-border-color: linear-gradient(to bottom left, #00d4ff, #020024);
+	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
 }
 
 .window_button:hover {
@@ -81,5 +81,5 @@
     -fx-text-fill: #00000098;
 	-fx-border-width: 2;
     -fx-border-radius: 40;
-	-fx-border-color: linear-gradient(to bottom left, #00d4ff, #020024);
+	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
 }
