--- a/src/userRegistration/RegistrationStyle.css
+++ b/src/userRegistration/RegistrationStyle.css
@@ -4,7 +4,7 @@
 }
 
 .blue_color {
-   -fx-background-color: linear-gradient(to bottom left, #00d4ff, #020024);
+   -fx-background-color: linear-gradient(to bottom left, #00A9CC, #020024);
    -fx-background-radius: 25 25 25 25;
 }
 
@@ -25,7 +25,7 @@
 }
 
 .starter_buttom {
-	-fx-background-color: linear-gradient(to bottom left, #00d4ff, #020024);
+	-fx-background-color: linear-gradient(to bottom left, #00A9CC, #020024);
 	-fx-font-weight: normal;
 	-fx-text-fill: white;
 	-fx-font-size: 20;
@@ -37,7 +37,7 @@
 	-fx-font-weight: normal;
     -fx-font-size: 20;
     -fx-text-fill: #000000b0;
-    -fx-border-color: linear-gradient(to bottom left, #00d4ff, #020024);
+    -fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
     -fx-border-width: 4;
     -fx-border-radius: 20;
 }
@@ -49,7 +49,7 @@
     -fx-font-size: 14;
     -fx-background-radius: 12;
     -fx-text-fill: #000000b0;
-    -fx-border-color: linear-gradient(to bottom left, #00d4ff, #020024);
+    -fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
     -fx-border-width: 3;
     -fx-border-radius: 12;
 }
@@ -59,7 +59,7 @@
 	-fx-font-weight: normal;
     -fx-font-size: 14;
     -fx-text-fill: #00000098;
-    -fx-border-color: linear-gradient(to bottom left, #00d4ff, #020024);
+    -fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
     -fx-border-width: 3;
     -fx-border-radius: 12;
 }
@@ -72,7 +72,7 @@
     -fx-text-fill: #000000b0;
 	-fx-border-width: 2;
     -fx-border-radius: 40;
-	-fx-border-color: linear-gradient(to bottom left, #00d4ff, #020024);
+	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
 }
 
 .window_button:hover {
@@ -81,7 +81,7 @@
     -fx-text-fill: #00000098;
 	-fx-border-width: 2;
     -fx-border-radius: 40;
-	-fx-border-color: linear-gradient(to bottom left, #00d4ff, #020024);
+	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
 }
 
 .comboBox {
