--- a/src/addPatientsPopUp/addPatientsLayout.fxml
+++ b/src/addPatientsPopUp/addPatientsLayout.fxml
@@ -12,7 +12,7 @@
          <children>
             <JFXButton fx:id="cancelOperation" layoutX="53.0" layoutY="538.0" onMouseClicked="#cancelOperation" prefHeight="29.0" prefWidth="178.0" styleClass="window_button" text="Cancel operation" />
             <JFXButton layoutX="260.0" layoutY="538.0" onMouseClicked="#addPatients" prefHeight="29.0" prefWidth="178.0" styleClass="window_button" text="Add selected patients" />
-            <JFXTreeTableView fx:id="patientsTreeView" layoutX="15.0" layoutY="14.0" prefHeight="500.0" prefWidth="460.0" />
+            <JFXTreeTableView fx:id="patientsTreeView" layoutX="15.0" layoutY="14.0" prefHeight="500.0" prefWidth="460.0" styleClass="white_color_round" />
          </children>
       </Pane>
    </children>
