--- a/src/doctorPatientsList/doctorPatientsLayout.fxml
+++ b/src/doctorPatientsList/doctorPatientsLayout.fxml
@@ -2,13 +2,21 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTreeTableView?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TreeTableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
 <Pane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="965.0" styleClass="white_color" stylesheets="@doctorPatientsStyle.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="doctorPatientsList.doctorPatientsController">
    <children>
-      <JFXTreeTableView fx:id="patientsTreeView" layoutX="33.0" layoutY="64.0" prefHeight="575.0" prefWidth="900.0" styleClass="tree_view">
+      <Label layoutX="106.0" layoutY="25.0" text="Your patients " textFill="#00000080">
+         <font>
+            <Font name="Ebrima" size="22.0" />
+         </font>
+      </Label>
+      <JFXTreeTableView fx:id="patientsTreeView" layoutX="33.0" layoutY="85.0" prefHeight="550.0" prefWidth="900.0" styleClass="tree_view">
          <columnResizePolicy>
             <TreeTableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy></JFXTreeTableView>
@@ -27,5 +35,10 @@
             <Font size="14.0" />
          </font>
       </JFXButton>
+      <ImageView fitHeight="45.0" fitWidth="64.0" layoutX="33.0" layoutY="18.0" opacity="0.5" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../icons/patients_black.png" />
+         </image>
+      </ImageView>
    </children>
 </Pane>
