--- a/src/doctorPatientsList/doctorPatientsStyle.css
+++ b/src/doctorPatientsList/doctorPatientsStyle.css
@@ -29,23 +29,35 @@
 	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
 }
 
-.tree_view {
-	-fx-background-radius: 20;
+.table_button {
+	-fx-background-radius: 40;
 	-fx-background-color: white;
-	-fx-font-weight: bold;
+	-fx-font-weight: normal;
     -fx-font-size: 12;
     -fx-text-fill: #000000b0;
-	-fx-border-width: 1;
-    -fx-border-radius: 20;
+	-fx-border-width: 2;
+    -fx-border-radius: 40;
+	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
 }
 
-.tree_view:hover {
-	-fx-background-radius: 20;
+.table_button:hover {
 	-fx-background-color: white;
-	-fx-font-weight: bold;
+	-fx-font-weight: normal;
     -fx-font-size: 12;
     -fx-text-fill: #00000098;
-	-fx-border-width: 1;
+	-fx-border-width: 2;
+    -fx-border-radius: 40;
+	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
+}
+
+.tree_view {
+	-fx-border-color: white;
+	-fx-border-width: 2;
+	-fx-background-radius: 0;
+	-fx-background-color: white;
+	-fx-font-weight: normal;
+    -fx-font-size: 14;
+    -fx-text-fill: #000000b0;
     -fx-border-radius: 20;
 }
 
