--- a/src/dialogPopUp/DialogPopUpStyle.css
+++ b/src/dialogPopUp/DialogPopUpStyle.css
@@ -20,7 +20,7 @@
 }
 
 .window_button:hover {
-	-fx-background-color: white;
+	-fx-background-color: #d8d8d8;
 	-fx-font-weight: normal;
     -fx-font-size: 12;
     -fx-text-fill: #00000098;
