--- a/src/doctorPatientsPane/DoctorPatientsStyle.css
+++ b/src/doctorPatientsPane/DoctorPatientsStyle.css
@@ -20,30 +20,9 @@
 }
 
 .window_button:hover {
-	-fx-background-color: white;
+	-fx-background-color: #d8d8d8;
 	-fx-font-weight: bold;
     -fx-font-size: 11;
-    -fx-text-fill: #00000098;
-	-fx-border-width: 2;
-    -fx-border-radius: 40;
-	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
-}
-
-.table_button {
-	-fx-background-radius: 40;
-	-fx-background-color: white;
-	-fx-font-weight: normal;
-    -fx-font-size: 12;
-    -fx-text-fill: #000000b0;
-	-fx-border-width: 2;
-    -fx-border-radius: 40;
-	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
-}
-
-.table_button:hover {
-	-fx-background-color: white;
-	-fx-font-weight: normal;
-    -fx-font-size: 12;
     -fx-text-fill: #00000098;
 	-fx-border-width: 2;
     -fx-border-radius: 40;
@@ -71,4 +50,26 @@
 	-fx-font-weight: bold;
     -fx-font-size: 16;
     -fx-font-family: "Ebrima";
+}
+
+.tree_table_button {
+	-fx-background-radius: 40;
+	-fx-background-color: white;
+	-fx-font-weight: normal;
+    -fx-font-size: 12;
+    -fx-text-fill: #000000b0;
+    -fx-border-width: 2;
+    -fx-border-radius: 40;
+	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
+}
+
+.tree_table_button:hover {
+	-fx-background-color: #d8d8d8;
+	-fx-background-radius: 40;
+	-fx-font-weight: normal;
+    -fx-font-size: 12;
+    -fx-text-fill: #00000098;
+    -fx-border-width: 2;
+    -fx-border-radius: 40;
+	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
 }
