--- a/src/logIn/LogInStyle.css
+++ b/src/logIn/LogInStyle.css
@@ -54,7 +54,7 @@
     -fx-border-radius: 12;
 }
 .starter_small_buttom:hover {
-	-fx-background-color: white;
+	-fx-background-color: #d8d8d8;
 	-fx-font-weight: normal;
     -fx-font-size: 14;
     -fx-text-fill: #00000098;
@@ -75,7 +75,7 @@
 }
 
 .window_button:hover {
-	-fx-background-color: white;
+	-fx-background-color: #d8d8d8;
 	-fx-font-weight: normal;
     -fx-font-size: 11;
     -fx-text-fill: #00000098;
