--- a/src/patientMainMenu/PacientMenuStyle.css
+++ b/src/patientMainMenu/PacientMenuStyle.css
@@ -25,7 +25,7 @@
 }
 
 .window_button:hover {
-	-fx-background-color: white;
+	-fx-background-color: #d8d8d8;
 	-fx-font-weight: bold;
     -fx-font-size: 11;
     -fx-text-fill: #00000098;
