--- a/src/patientRecordsPane/PatientRecordsStyle.css
+++ b/src/patientRecordsPane/PatientRecordsStyle.css
@@ -20,45 +20,13 @@
 }
 
 .window_button:hover {
-	-fx-background-color: white;
+	-fx-background-color: #d8d8d8;
 	-fx-font-weight: bold;
     -fx-font-size: 11;
     -fx-text-fill: #00000098;
 	-fx-border-width: 2;
     -fx-border-radius: 40;
 	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
-}
-
-.table_button {
-	-fx-background-radius: 40;
-	-fx-background-color: white;
-	-fx-font-weight: normal;
-    -fx-font-size: 12;
-    -fx-text-fill: #000000b0;
-	-fx-border-width: 2;
-    -fx-border-radius: 40;
-	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
-}
-
-.table_button:hover {
-	-fx-background-color: white;
-	-fx-font-weight: normal;
-    -fx-font-size: 12;
-    -fx-text-fill: #00000098;
-	-fx-border-width: 2;
-    -fx-border-radius: 40;
-	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
-}
-
-.tree_view {
-	-fx-border-color: white;
-	-fx-border-width: 2;
-	-fx-background-radius: 0;
-	-fx-background-color: white;
-	-fx-font-weight: normal;
-    -fx-font-size: 14;
-    -fx-text-fill: #000000b0;
-    -fx-border-radius: 20;
 }
 
 .label_text {
