--- a/src/logIn/LogInLayout.fxml
+++ b/src/logIn/LogInLayout.fxml
@@ -16,7 +16,7 @@
          <children>
             <ImageView fitHeight="165.0" fitWidth="166.0" layoutX="117.0" layoutY="195.0" pickOnBounds="true" preserveRatio="true" smooth="false">
                <image>
-                  <Image url="@../../Icons/logo.png" />
+                  <Image url="@../icons/logo.png" />
                </image>
             </ImageView>
             <Label layoutX="113.0" layoutY="372.0" text="TELELEPSIA" textFill="#ffffffd9">
@@ -45,7 +45,7 @@
             </Label>
             <ImageView fitHeight="81.0" fitWidth="89.0" layoutX="53.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../Icons/logo.png" />
+                  <Image url="@../icons/logo.png" />
                </image>
             </ImageView>
             <JFXButton fx:id="signUpButton" layoutX="145.0" layoutY="521.0" onMouseClicked="#openRegistration" prefHeight="38.0" prefWidth="130.0" styleClass="starter_small_buttom" text="Sign Up" textFill="#00000098">
