--- a/src/userRegistration/RegistrationLayout.fxml
+++ b/src/userRegistration/RegistrationLayout.fxml
@@ -17,7 +17,7 @@
          <children>
             <ImageView fitHeight="165.0" fitWidth="166.0" layoutX="117.0" layoutY="195.0" pickOnBounds="true" preserveRatio="true" smooth="false">
                <image>
-                  <Image url="@../../Icons/logo.png" />
+                  <Image url="@../icons/logo.png" />
                </image>
             </ImageView>
             <Label layoutX="113.0" layoutY="372.0" text="TELELEPSIA" textFill="#ffffffd9">
