--- a/src/doctorPatientsPane/DoctorPatientsLayout.fxml
+++ b/src/doctorPatientsPane/DoctorPatientsLayout.fxml
@@ -25,7 +25,7 @@
             <Font size="14.0" />
          </font>
       </JFXButton>
-      <JFXButton layoutX="923.0" layoutY="13.0" onMouseClicked="#closeApp" prefHeight="25.0" prefWidth="25.0" styleClass="window_button" text="X">
+      <JFXButton layoutX="923.0" layoutY="13.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#closeApp" prefHeight="28.0" prefWidth="28.0" styleClass="window_button" text="X">
          <font>
             <Font size="14.0" />
          </font>
