--- a/src/doctorMainMenu/DoctorMenuStyle.css
+++ b/src/doctorMainMenu/DoctorMenuStyle.css
@@ -25,7 +25,7 @@
 }
 
 .window_button:hover {
-	-fx-background-color: white;
+	-fx-background-color: #d8d8d8;
 	-fx-font-weight: bold;
     -fx-font-size: 11;
     -fx-text-fill: #00000098;
@@ -43,5 +43,40 @@
 .label_text_bold {
 	-fx-font-weight: bold;
     -fx-font-size: 16;
+    -fx-text-fill: #ffffffb0;
     -fx-font-family: "Ebrima";
+}
+
+.menu_button {
+	-fx-font-weight: normal;
+	-fx-font-size: 16;
+	-fx-text-fill: #ffffffb0;
+	-fx-font-family: "Ebrima";
+	-fx-background-color: transparent;
+}
+
+.menu_button:hover {
+	-fx-font-weight: normal;
+	-fx-font-size: 16;
+	-fx-text-fill: #ffffffb3;
+	-fx-font-family: "Ebrima";
+	-fx-background-color: #ffffff0c;
+}
+
+.log_out_buttom {
+	-fx-font-weight: normal;
+	-fx-font-size: 16;
+	-fx-text-fill: #ffffffb3;
+	-fx-font-family: "Ebrima";
+	-fx-background-radius: 25 25 25 25;
+	-fx-background-color: transparent;
+}
+
+.log_out_buttom:hover {
+	-fx-font-weight: normal;
+	-fx-font-size: 16;
+	-fx-text-fill: #ffffffb0;
+	-fx-font-family: "Ebrima";
+	-fx-background-radius: 25 25 25 25;
+	-fx-background-color: #ffffff0c;
 }
